feat: mint docs api playground
